--- a/index.html
+++ b/index.html
@@ -127,7 +127,11 @@
               </p>
             </li>
             <li class="category-list__item">
-              <img src="./img/microphone.png" alt="microphone" class="category-list__img"/>
+              <img
+                src="./img/microphone.png"
+                alt="microphone"
+                class="category-list__img"
+              />
               <h3 class="category-list__title">Local Events</h3>
               <p class="category-list__text">
                 Barton vanity itself do in it. Preferd to men it engrossed
@@ -202,6 +206,113 @@
           </ul>
         </div>
       </section>
+      <section class="advantages">
+        <div class="advantages__container container">
+          <p class="advantages__desc">Easy and Fast</p>
+          <div class="advantages__info">
+            <h2 class="advantages__title">
+              Book your next trip in 3 easy steps
+            </h2>
+            <ul class="advantages__step-list">
+              <li class="advantages__item">
+                <div class="advantages__wrap-icon">
+                  <svg>
+                    <use href="./img/svg/first-step.svg#icon"></use>
+                  </svg>
+                </div>
+                <div class="advantages__wrap-text">
+                  <h3 class="advantages__item-title">Choose Destination</h3>
+                  <p class="advantages__text">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Urna, tortor tempus.
+                  </p>
+                </div>
+              </li>
+              <li class="advantages__item">
+                <div class="advantages__wrap-icon">
+                  <svg>
+                    <use href="./img/svg/second-step.svg#water"></use>
+                  </svg>
+                </div>
+                <div class="advantages__wrap-text">
+                  <h3 class="advantages__item-title">Make Payment</h3>
+                  <p class="advantages__text">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Urna, tortor tempus.
+                  </p>
+                </div>
+              </li>
+              <li class="advantages__item">
+                <div class="advantages__wrap-icon">
+                  <svg>
+                    <use href="./img/svg/third-step.svg#taxi"></use>
+                  </svg>
+                </div>
+                <div class="advantages__wrap-text">
+                  <h3 class="advantages__item-title">
+                    Reach Airport on Selected Date
+                  </h3>
+                  <p class="advantages__text">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Urna, tortor tempus.
+                  </p>
+                </div>
+              </li>
+            </ul>
+          </div>
+          <div class="advantages__card">
+            <div class="advantages__thumb">
+              <img src="./img/card-girl.png" alt="girl trip to greece">
+            </div>
+            <h3 class="advantages__place">Trip To Greece</h3>
+            <p class="advantages__place-text">
+              14-29 June
+              <span>by Robbin joseph</span>
+            </p>
+            <ul class="advantages__links">
+              <li class="advantages__link">
+                <svg>
+                  <use href="./img/svg/leaf.svg#leaf"></use>
+                </svg>
+              </li>
+              <li class="advantages__link">
+                <svg>
+                  <use href="./img/svg/map.svg#map"></use>
+                </svg>
+              </li>
+              <li class="advantages__link">
+                <svg>
+                  <use href="./img/svg/send.svg#send"></use>
+                </svg>
+              </li>
+            </ul>
+            <div class="advantages__recommendation">
+              <p class="advantages__recommendation-text">
+                <svg>
+                  <use href="./img/svg/building.svg#building"></use>
+                </svg>
+                <span>24 people going</span>
+              </p>
+              <svg>
+                <use href="./img/svg/heart.svg#heart"></use>
+              </svg>
+            </div>
+            <div class="advantages__drop-card">
+              <div class="advantages__wrap-img">
+                <img width="50" height="50" src="./img/advantages-cmall-card.png" alt="build place">
+              </div>
+              <div class="advantages__wrap-text">
+                <p class="advantages__topline">Ongoing</p>
+                <h3 class="advantages__place">Trip to rome</h3>
+                <p class="advantages__progress">
+                  <span>40%</span>completed
+                </p>
+                <div class="advantages__progress-line"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
       <section class="testimonals">
         <div class="testimonals__container container">
           <div class="testimonals__head">
@@ -264,19 +375,27 @@
       </section>
       <section class="subscribe">
         <div class="subscribe__container container">
-          <h2 class="subscribe__title">Subscribe to get information, latest news and other
-            interesting offers about Cobham</h2>
-            <form class="subscribe__form">
-              <label class="subscribe__label" for="email">
-                <input id="email" class="subscribe__input" type="email" placeholder="Your email" required>
-              </label>
-              <button class="subscribe__btn" type="submit">Subscribe</button>
-            </form>
-            <div class="subscribe__telegram">
-              <svg class="subscribe__telegram-icon">
-                <use href="./img/svg/telegram.svg#telegram"></use>
-              </svg>
-            </div>
+          <h2 class="subscribe__title">
+            Subscribe to get information, latest news and other interesting
+            offers about Cobham
+          </h2>
+          <form class="subscribe__form">
+            <label class="subscribe__label" for="email">
+              <input
+                id="email"
+                class="subscribe__input"
+                type="email"
+                placeholder="Your email"
+                required
+              />
+            </label>
+            <button class="subscribe__btn" type="submit">Subscribe</button>
+          </form>
+          <div class="subscribe__telegram">
+            <svg class="subscribe__telegram-icon">
+              <use href="./img/svg/telegram.svg#telegram"></use>
+            </svg>
+          </div>
         </div>
       </section>
     </main>
