--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
             </h2>
             <ul class="advantages__step-list">
               <li class="advantages__item">
-                <div class="advantages__wrap-icon">
+                <div class="advantages__wrap-icon wrap_yellow">
                   <svg>
                     <use href="./img/svg/first-step.svg#icon"></use>
                   </svg>
@@ -229,7 +229,7 @@
                 </div>
               </li>
               <li class="advantages__item">
-                <div class="advantages__wrap-icon">
+                <div class="advantages__wrap-icon wrap_red">
                   <svg>
                     <use href="./img/svg/second-step.svg#water"></use>
                   </svg>
@@ -243,7 +243,7 @@
                 </div>
               </li>
               <li class="advantages__item">
-                <div class="advantages__wrap-icon">
+                <div class="advantages__wrap-icon wrap_green">
                   <svg>
                     <use href="./img/svg/third-step.svg#taxi"></use>
                   </svg>
@@ -261,29 +261,33 @@
             </ul>
           </div>
           <div class="advantages__card">
-            <div class="advantages__thumb">
-              <img src="./img/card-girl.png" alt="girl trip to greece">
-            </div>
+            <img src="./img/card-girl.png" alt="girl trip to greece" />
             <h3 class="advantages__place">Trip To Greece</h3>
             <p class="advantages__place-text">
               14-29 June
               <span>by Robbin joseph</span>
             </p>
             <ul class="advantages__links">
-              <li class="advantages__link">
-                <svg>
-                  <use href="./img/svg/leaf.svg#leaf"></use>
-                </svg>
+              <li class="advantages__links-item">
+                <a href="#" class="advantages__link">
+                  <svg>
+                    <use href="./img/svg/leaf.svg#leaf"></use>
+                  </svg>
+                </a>
               </li>
-              <li class="advantages__link">
-                <svg>
-                  <use href="./img/svg/map.svg#map"></use>
-                </svg>
+              <li class="advantages__links-item">
+                <a href="#" class="advantages__link">
+                  <svg>
+                    <use href="./img/svg/map.svg#map"></use>
+                  </svg>
+                </a>
               </li>
-              <li class="advantages__link">
-                <svg>
-                  <use href="./img/svg/send.svg#send"></use>
-                </svg>
+              <li class="advantages__links-item">
+                <a href="#" class="advantages__link">
+                  <svg>
+                    <use href="./img/svg/send.svg#send"></use>
+                  </svg>
+                </a>
               </li>
             </ul>
             <div class="advantages__recommendation">
@@ -299,15 +303,20 @@
             </div>
             <div class="advantages__drop-card">
               <div class="advantages__wrap-img">
-                <img width="50" height="50" src="./img/advantages-cmall-card.png" alt="build place">
+                <img
+                  width="50"
+                  height="50"
+                  src="./img/advantages-cmall-card.png"
+                  alt="build place"
+                />
               </div>
-              <div class="advantages__wrap-text">
+              <div class="advantages__wrap-card-text">
                 <p class="advantages__topline">Ongoing</p>
                 <h3 class="advantages__place">Trip to rome</h3>
-                <p class="advantages__progress">
-                  <span>40%</span>completed
-                </p>
-                <div class="advantages__progress-line"></div>
+                <p class="advantages__progress"><span>40%</span> completed</p>
+                <div class="advantages__progress-line">
+                  <div class="advantages__progress-line-filled"></div>
+                </div>
               </div>
             </div>
           </div>
