hover/focus + add 1 img to partners

--- a/index.html
+++ b/index.html
@@ -335,40 +335,59 @@
           <p class="partners__desc">Top Selling</p>
           <ul class="partners__list">
             <li class="partners__item">
-              <img
-                src="./img/partner-image1.png"
-                alt=""
-                class="partners__img"
-                width="130"
-                height="120"
-              />
+              <a href="http://www.axonaviation.com/">
+                <img
+                  src="./img/partner-image1.png"
+                  alt=""
+                  class="partners__img"
+                  width="130"
+                  height="120"
+                />
+              </a>
             </li>
             <li class="partners__item">
-              <img
-                src="./img/partner-image2.png"
-                alt=""
-                class="partners__img"
-                width="172"
-                height="102"
-              />
+              <a href="https://www.jetstar.com/">
+                <img
+                  src="./img/partner-image2.png"
+                  alt=""
+                  class="partners__img"
+                  width="172"
+                  height="102"
+                />
+              </a>
             </li>
             <li class="partners__item">
-              <img
-                src="./img/partner-image3.png"
-                alt=""
-                class="partners__img"
-                width="241"
-                height="149"
-              />
+              <a href="https://www.expedia.com/">
+                <img
+                  src="./img/partner-image3.png"
+                  alt=""
+                  class="partners__img"
+                  width="241"
+                  height="149"
+                />
+              </a>
             </li>
             <li class="partners__item">
-              <img
-                src="./img/partner-image4.png"
-                alt=""
-                class="partners__img"
-                width="162"
-                height="30"
-              />
+              <a href="https://www.qantas.com/">
+                <img
+                  src="./img/partner-image4.png"
+                  alt=""
+                  class="partners__img"
+                  width="162"
+                  height="30"
+                />
+              </a>
+            </li>
+            <li class="partners__item">
+              <a href="https://www.ita-airways.com/">
+                <img
+                  src="./img/partner-image5.png"
+                  alt=""
+                  class="partners__img"
+                  width="94"
+                  height="21"
+                />
+              </a>
             </li>
           </ul>
         </div>
